# LearnProjectDeploy

./: .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
