[tool.poetry]
name = "src"
version = "0.1.0"
description = "poetry部署fastapi 并且使用Dockerfile部署"
authors = ["love"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
loguru = "^0.7.2"
pre-commit = "^3.8.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
